# tamara

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  tamara.sql
cfg/: backend.yaml  objetivos.yaml
sql/: conversor.py  datos_prueba.sql  tamara.sql
src/: args.rs  backend.rs  errors.rs  main.rs  ping.rs  utils.rs
src/disponibilidad/: db.rs  http.rs  icmp.rs  mod.rs
src/icmp/: destino.rs  errors.rs  icmp.rs  mod.rs  packet.rs  paquete.rs  protocol.rs
src/packet/: icmp.rs  mod.rs
src/tipos/: backend.rs  configuracion.rs  icmp.rs  mod.rs
