[package]
name = "tamara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
clap = { version = "3.2.21", features = ["derive"] }
deadpool-postgres = "0.10.2"
env_logger = "0.9.0"
futures = "0.3.24"
libc = "0.2.132"
log = "0.4.17"
postgres-types = { version = "0.2.4", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
socket2 = { version = "0.4.7", features = ["all"] }
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
tokio-postgres = "0.7.7"
